using serilog enrichers sensitive

--- a/Serilog.Example.Api/appsettings.Development.json
+++ b/Serilog.Example.Api/appsettings.Development.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Enrichers.Sensitive"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -38,7 +41,21 @@
       "WithThreadId",
       "WithProcessId",
       "WithMachineName",
-      "WithEnvironmentName"
+      "WithEnvironmentName",
+      {
+        "Name": "WithSensitiveDataMasking",
+        "Args": {
+          "options": {
+            "MaskValue": "******",
+            "MaskProperties": [
+              "email",
+              "FirstName",
+              "LastName"
+            ],
+            "Mode": "Globally"
+          }
+        }
+      }
     ]
   }
 }
